<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Second">

    <TextView
        android:id="@+id/title"
        android:text="@string/vote_please"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <RelativeLayout
        android:id="@+id/rel_name"
        android:layout_width="match_parent"
        android:layout_below="@+id/title"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginEnd="@dimen/margin_rigth"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_name"
            android:text="@string/Name"
            android:layout_marginStart="@dimen/margin_rigth"
            android:textSize="@dimen/textsize"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/get_name"
            android:hint="@string/hintname"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="@dimen/margin_rigth"
            android:background="@drawable/edittext_bg"
            android:padding="10dp"
            android:layout_toEndOf="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rel_id"
        android:layout_width="match_parent"
        android:layout_below="@+id/rel_name"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginEnd="@dimen/margin_rigth"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_id"
            android:text="@string/id"
            android:layout_marginStart="@dimen/margin_rigth"
            android:textSize="@dimen/textsize"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/get_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="@dimen/margin_rigth"
            android:layout_toEndOf="@+id/text_id"
            android:inputType="numberDecimal"
            android:background="@drawable/edittext_bg"
            android:hint="@string/hintid"
            android:padding="10dp" />
    </RelativeLayout>
    <Spinner
        android:id="@+id/spinner"
        android:layout_below="@+id/rel_id"
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginEnd="@dimen/margin_rigth"
        android:layout_height="wrap_content"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_below="@+id/spinner"
      android:layout_marginTop="40dp"
      android:layout_marginStart="@dimen/margin_rigth"
      android:layout_marginEnd="@dimen/margin_rigth"
      android:layout_height="wrap_content">
      <ToggleButton
          android:id="@+id/toggle"
          android:layout_width="0dp"
          android:layout_weight="0.2"
          android:textOff="@string/refuse"
          android:background="@color/purple_700"
          android:textColor="@color/white"
          android:textOn="@string/accept"
          android:layout_marginEnd="@dimen/margin_top"
          android:layout_height="wrap_content"/>
      <Button
          android:id="@+id/btn_save"
          android:layout_width="0dp"
          android:background="@color/purple_700"
          android:text="@string/vote"
          android:layout_weight="0.8"
          android:layout_height="wrap_content"/>
  </LinearLayout>
</RelativeLayout>