<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearlayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/candidate1"
            android:text="@string/cadidate2"
            android:layout_gravity="center"
            android:textSize="@dimen/textsize"
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/candidate2"
            android:text="@string/cadidate1"
            android:layout_gravity="center"
            android:textSize="@dimen/textsize"
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/candidate3"
            android:text="@string/cadidate3"
            android:layout_gravity="center"
            android:textSize="@dimen/textsize"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_voit"
        android:layout_below="@+id/linearlayout"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_rigth"
        android:text="@string/vote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>